# muduo_server_learn

./: README.md
ppt/: 01大并发服务器架构介绍.ppt  02大型网站架构演变过程.ppt  03poll（一）.ppt  04poll（二）.ppt  05epoll（一）.ppt  06epoll（二）.ppt  07muduo介绍.ppt  08面向对象编程风格.ppt  09基于对象编程风格.ppt  10muduo_base库源码分析（一）.ppt  11muduo_base库源码分析（二）.ppt  12muduo_base库源码分析（三）.ppt  13muduo_base库源码分析（四）.ppt  14muduo_base库源码分析（五）.ppt  15muduo_base库源码分析（六）.ppt  16muduo_base库源码分析（七）.ppt  17muduo_base库源码分析（八）.ppt  18muduo_base库源码分析（九）.ppt  19muduo_base库源码分析（十）.ppt  20muduo_base库源码分析（十一）.ppt  21muduo_base库源码分析（十二）.ppt  22muduo_base库源码分析（十三）.ppt  25muduo_net库源码分析（一）.ppt  26muduo_net库源码分析（二）.ppt  27muduo_net库源码分析（三）.ppt  28muduo_net库源码分析（四）.ppt  29muduo_net库源码分析（五）.ppt  30muduo_net库源码分析（六）.ppt  31muduo_net库源码分析（七）.ppt  32muduo_net库源码分析（八）.ppt  33muduo_net库源码分析（九）.ppt  34muduo_net库源码分析（十）.ppt  35muduo_net库源码分析（十一）.ppt  36muduo_net库源码分析（十二）.ppt  37muduo_net库源码分析（十三）.ppt  38muduo_net库源码分析（十四）.ppt  39muduo_net库源码分析（十五）.ppt  40muduo_http库源码分析.ppt  41muduo_inspect库源码分析.ppt  42muduo库使用示例（一）.ppt  (+7 more)
src/03/: Makefile  echosrv_poll.cpp
src/03/tmp/: build.sh
src/04/: CMakeLists.txt  echocli.cpp
src/05/: CMakeLists.txt  echosrv_epoll.cpp  echosrv_poll.cpp
src/08/: CMakeLists.txt  Thread.cpp  Thread.h  Thread_test.cpp  build.sh
src/09/: CMakeLists.txt  Thread.cpp  Thread.h  Thread_test.cpp  bf_test.cpp
src/11/: test.cpp
src/11/jmuduo/muduo/base/: CMakeLists.txt
src/11/jmuduo/tests/: bsa.cc
src/12/jmuduo/muduo/base/: CMakeLists.txt
src/12/jmuduo/muduo/base/tests/: CMakeLists.txt
src/12/jmuduo/tests/: CMakeLists.txt
src/13/jmuduo/muduo/base/: CMakeLists.txt
src/13/jmuduo/tests/: CMakeLists.txt
src/14/jmuduo/muduo/base/tests/: CMakeLists.txt
src/15/jmuduo/muduo/base/: CMakeLists.txt  Exception.cc
src/15/jmuduo/muduo/base/tests/: CMakeLists.txt
src/15/jmuduo/tests/: CMakeLists.txt  CountDownLatch_test2.cc
src/16/jmuduo/muduo/base/: CMakeLists.txt
src/16/jmuduo/tests/: CountDownLatch_test1.cc
src/18/jmuduo/: CMakeLists.txt
src/18/jmuduo/tests/: Deadlock_test.cc
src/20/jmuduo/muduo/base/: CMakeLists.txt
src/21/jmuduo/tests/: CMakeLists.txt  Deadlock_test2.cc
src/22/jmuduo/muduo/base/: CMakeLists.txt
src/22/jmuduo/tests/: Log_test1.cc
src/25/jmuduo/muduo/base/: LogStream.cc
src/25/jmuduo/muduo/net/: CMakeLists.txt  EventLoop.cc  EventLoop.h
src/25/jmuduo/tests/: CMakeLists.txt
src/26/jmuduo/muduo/base/: StringPiece.h
src/26/jmuduo/muduo/net/: CMakeLists.txt  EventLoop.cc  EventLoop.h
src/27/jmuduo/muduo/net/: EventLoop.cc
src/27/jmuduo/tests/: CMakeLists.txt  Reactor_test01.cc
src/28/: rvo_test.cpp  set_test.cpp
src/28/jmuduo/muduo/base/: LogFile.h  LogStream.h
src/28/jmuduo/muduo/net/: CMakeLists.txt  Callbacks.h  Channel.cc  EventLoop.cc  EventLoop.h  TimerQueue.cc
src/28/jmuduo/tests/: CMakeLists.txt
src/29/jmuduo/muduo/base/: LogFile.cc
src/29/jmuduo/muduo/net/: EventLoop.cc  TimerQueue.cc
src/29/jmuduo/tests/: CMakeLists.txt
src/30/jmuduo/: CMakeLists.txt
src/30/jmuduo/muduo/base/: LogStream.h  Logging.cc
src/30/jmuduo/muduo/net/: CMakeLists.txt  Poller.h  Timer.cc
src/30/jmuduo/tests/: Reactor_test03.cc
src/31/jmuduo/muduo/net/: CMakeLists.txt
src/31/jmuduo/tests/: CMakeLists.txt  Reactor_test02.cc
src/32/jmuduo/muduo/base/: LogFile.h
src/32/jmuduo/muduo/net/: CMakeLists.txt
src/32/jmuduo/tests/: CMakeLists.txt
src/33/jmuduo/muduo/net/: CMakeLists.txt  Callbacks.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  TimerQueue.cc
src/33/jmuduo/tests/: CMakeLists.txt  Log_test2.cc  Reactor_test06.cc
src/34/: esft.cpp
src/34/jmuduo/muduo/net/: Callbacks.h  Channel.cc  TcpConnection.h  TcpServer.cc  TcpServer.h
src/35/jmuduo/muduo/net/: CMakeLists.txt  EventLoop.h
src/35/jmuduo/tests/: Reactor_test04.cc  Reactor_test09.cc
src/36/jmuduo/muduo/base/: Thread.cc
src/36/jmuduo/muduo/net/: TcpConnection.cc  TcpServer.cc  TcpServer.h
src/36/jmuduo/tests/: CMakeLists.txt  Reactor_test10.cc
src/37/: testcli.c
src/37/jmuduo/muduo/net/: CMakeLists.txt  Callbacks.h  EventLoopThreadPool.cc  TcpConnection.cc  TcpConnection.h  TcpServer.cc  Timer.h
src/37/jmuduo/tests/: CMakeLists.txt
src/38/jmuduo/muduo/net/: Buffer.cc  SocketsOps.cc  TimerQueue.h
src/38/jmuduo/tests/: CMakeLists.txt
src/39/: TcpClient_test.cc
src/40/jmuduo/: build.sh
src/40/jmuduo/muduo/net/: CMakeLists.txt  Connector.cc
src/40/jmuduo/tests/: CMakeLists.txt
src/41/jmuduo/muduo/base/: LogStream.cc
src/41/jmuduo/muduo/net/: EventLoop.cc  TcpServer.cc
src/41/jmuduo/tests/: Reactor_test08.cc  Reactor_test12.cc
src/42/jmuduo/muduo/net/: Buffer.h  EventLoopThread.h  Socket.h
src/42/jmuduo/tests/: Reactor_test13.cc
src/43/jmuduo/muduo/base/: StringPiece.h
src/43/jmuduo/muduo/net/: Channel.cc  EventLoopThread.cc  EventLoopThreadPool.h
src/43/jmuduo/tests/: Pthread_atfork_test.cc
src/44/jmuduo/: CMakeLists.txt
src/44/jmuduo/examples/sudoku/: server_threadpool.cc
src/44/jmuduo/muduo/net/: TcpConnection.h  (+1 more)
src/44/jmuduo/tests/: Filetransfer_test.cc  TcpClient_test.cc
src/47/jmuduo/tests/: CMakeLists.txt  Reactor_test05.cc
src/48/jmuduo/tests/: Reactor_test07.cc  Reactor_test11.cc
src/49/: crebas.sql  server.conf
src/49/ABCBank/BankClient/: BankClient.sln  BankClient.vcproj  BankSession.cpp  BankSession.h  Client.cpp  Client.h  TransDetail.h  client.conf  main.cpp
src/49/ABCBank/BankServer/: BankServer.sln  BankServer.vcproj  BankSession.cpp  BankSession.h  BankThread.cpp  BankThread.h  Server.cpp  Server.h  TransactionManager.cpp  TransactionManager.h  main.cpp
src/49/ABCBank/Inc/: my_config.h  mysql_version.h
src/49/ABCBank/Lib/: libmysql.lib
src/49/ABCBank/Public/: Date.cpp  Date.h  Exception.cpp  Exception.h  Idea.cpp  Idea.h  JInStream.cpp  JInStream.h  JOutStream.cpp  JOutStream.h  JThread.cpp  JThread.h  JUtil.cpp  JUtil.h  LogStream.cpp  LogStream.h  Logging.cpp  Logging.h  MD5.cpp  MD5.h  Singleton.h  Socket.cpp  Socket.h  StringUtil.cpp  StringUtil.h  SystemConfig.h  Systemconfig.cpp  Timestamp.cpp  Timestamp.h
(+148 files in other folders)
